--- a/src/App.module.css
+++ b/src/App.module.css
@@ -10,9 +10,7 @@
   margin-top: 16px;
 }
 
-.grid {
-  display: table;
-  border-collapse: collapse;
+.table {
   border: 5px solid rgb(232, 232, 232);
   position: relative;
 }
