--- a/src/App.module.css
+++ b/src/App.module.css
@@ -11,9 +11,12 @@
 }
 
 .table {
-  border: 5px solid rgb(232, 232, 232);
   position: relative;
   border-collapse: collapse;
+
+  /* we don't want the border counting as part of the size for this table */
+  box-sizing: content-box;
+  border: 5px solid rgb(232, 232, 232);
 }
 
 .debugInfo {
